Reduced code duplication with block statements and setup in base.html

--- a/reviewSite/review_app/templates/about.html
+++ b/reviewSite/review_app/templates/about.html
@@ -1,18 +1,6 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us - Your Website</title>
-    <!-- Include Bootstrap CSS (if you're using it) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Include your custom CSS file (if any) -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
-    <!-- Include navigation bar -->
-    {% include 'navigation_bar.html' %}
+{% extends "base.html"%}
+
+{% block content %}
 
     <div class="container mt-5">
         <h1>About Us</h1>
@@ -22,7 +10,4 @@
         <p>Donec vel eros vitae mauris lacinia vehicula. Nullam sed neque libero. Suspendisse potenti. Nam sodales mauris non tortor finibus consectetur.</p>
     </div>
 
-    <!-- Include Bootstrap JS (if you're using it) -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
