--- a/reviewSite/review_app/templates/album_list.html
+++ b/reviewSite/review_app/templates/album_list.html
@@ -1,17 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Album List</title>
-    <!-- Include Bootstrap CSS (if you're using it) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Include your custom CSS file (if any) -->
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
-    {% include 'navigation_bar.html' %}
+{% extends "base.html"%}
+
+{% block content %}
+
     <div class="container mt-4"> <!-- Wrap content in a container for responsiveness -->
         <h1 class="text-center mb-4">Album List</h1> <!-- Make title centered and add margin bottom -->
         <ul class="list-unstyled"> <!-- Remove default list styling -->
@@ -24,5 +14,5 @@
             {% endfor %}
         </ul>
     </div>
-</body>
-</html>
+
+{% endblock content %}
