--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -1,33 +1,44 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{% block title %}Album Top 23 of 23{% endblock %}</title>
+    
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
     <!-- Add your CSS links here -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-    <!-- Add your JavaScript links here -->
-    <script src="{% static 'js/script.js' %}" defer></script>
-</head>
-<body>
+    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
+  </head>
+
+  <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="{% url 'album_list' %}">Home</a></li>
-                <li><a href="{% url 'about' %}">About</a></li>
-                <li><a href="{% url 'contact' %}">Contact</a></li>
-            </ul>
-        </nav>
+        {% include "navigation_bar.html" %}
     </header>
 
     <main>
-        {% block content %}
+        {% block content %} 
         {% endblock %}
     </main>
 
     <footer>
         <!-- Add your footer content here -->
-        <p>&copy; {{ year }} All Rights Reserved</p>
+        <div class="container mt-4">      
+            <p>&copy; {{ year }} All Rights Reserved</p>
+        </div>
     </footer>
-</body>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
