--- a/reviewSite/review_app/templates/contact.html
+++ b/reviewSite/review_app/templates/contact.html
@@ -1,42 +1,41 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact Us - Your Website</title>
-    {% load static %}
-    <!-- Include Bootstrap CSS (if you're using it) -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <!-- Include your custom CSS file (if any) -->
-    <link rel="stylesheet" href="{% static 'css/styles.css' %}">
-</head>
-<body>
-    <!-- Include navigation bar -->
-    {% include 'navigation_bar.html' %}
+{% extends "base.html"%}
+
+{% block content %}
 
     <div class="container mt-5">
-        <h1>Contact Us</h1>
-        <p>Have questions or need assistance? Contact us using the form below:</p>
-        
-        <!-- Contact form -->
-        <form>
-            <div class="form-group">
-                <label for="name">Name:</label>
-                <input type="text" class="form-control" id="name" placeholder="Enter your name">
-            </div>
-            <div class="form-group">
-                <label for="email">Email address:</label>
-                <input type="email" class="form-control" id="email" placeholder="Enter your email">
-            </div>
-            <div class="form-group">
-                <label for="message">Message:</label>
-                <textarea class="form-control" id="message" rows="5" placeholder="Enter your message"></textarea>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+    <h1>Contact Us</h1>
+    <p>Have questions or need assistance? Contact us using the form below:</p>
+
+    <form>
+        <div class="form-group">
+        <label for="name">Name:</label>
+        <input
+            type="text"
+            class="form-control"
+            id="name"
+            placeholder="Enter your name"
+        />
+        </div>
+        <div class="form-group">
+        <label for="email">Email address:</label>
+        <input
+            type="email"
+            class="form-control"
+            id="email"
+            placeholder="Enter your email"
+        />
+        </div>
+        <div class="form-group">
+        <label for="message">Message:</label>
+        <textarea
+            class="form-control"
+            id="message"
+            rows="5"
+            placeholder="Enter your message"
+        ></textarea>
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
     </div>
 
-    <!-- Include Bootstrap JS (if you're using it) -->
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-</body>
-</html>
+{% endblock content %}
