--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -4,18 +4,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>{% block title %}Album Top 23 of 23{% endblock %}</title>
-    
-    <!-- Bootstrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
-      crossorigin="anonymous"
-    />
-    <!-- Add your CSS links here -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"    />
     <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
+    <title>Album Top 23 of 23</title>
   </head>
 
   <body>
