--- a/reviewSite/review_app/templates/album_list.html
+++ b/reviewSite/review_app/templates/album_list.html
@@ -8,26 +8,33 @@
             <hr />
             <form class="d-flex justify-content-around" method="GET">
                 <div class="input-group">
-                    <input class="form-control" type="search" name="album_search" placeholder="Filter Albums">
-                    <span class="input-group-text">
-                        <button type="submit" class="btn btn_primary btn-sm">Search</button>
-                    </span>
-                    <span class="input-group-text">
-                        <button action="{% url 'album_list' %}" class="btn btn_primary btn-sm">Reset</button>
-                    </span>
+                    <input 
+                        class="form-control" 
+                        type="text" 
+                        name="album_search" 
+                        placeholder={% if query != '' and query is not None %} "{{ query }}" {% else %} "Search Album..." {% endif %}
+                    >
+                    <button class="btn btn-sm" type="submit">Search</button>
+                    <button class="btn btn-sm" action="{% url 'album_list' %}">Reset</button>
                 </div>
             </form>
         </div>
         <div class="d-flex flex-row flex-wrap justify-content-around"> 
-            {% for album in albums %}
-                <div class="card">
-                    <img class="card-img-top" src={{ album.cover_image.url }} alt="Image not found">
-                    <div class="card-body">
-                        <a href="{% url 'album_detail' pk=album.pk %}" class="text-dark"> <h5 class="card-title">{{ album.title }}</h5> </a>
-                        <h6 class="card-subtitle mb-2 text-muted">{{ album.artist }}</h6>
+            {% if albums %}
+                {% for album in albums %}
+                    <div class="card">
+                        <a href="{% url 'album_detail' pk=album.pk %}" class="text-dark">
+                            <img class="card-img-top" src={{ album.cover_image.url }} alt="Image not found">
+                            <div class="card-body">
+                                <h5 class="card-title">{{ album.title }}</h5>
+                                <h6 class="card-subtitle mb-2 text-muted">{{ album.artist }}</h6>
+                            </div>
+                        </a>
                     </div>
-                </div>
-            {% endfor %}
+                {% endfor %}
+            {% else %}
+                <p>No Album found...</p>
+          {% endif %}
         </div>
     </div>
 
