Changed card highlight to beatifull pink

--- a/reviewSite/static/css/styles.css
+++ b/reviewSite/static/css/styles.css
@@ -34,7 +34,7 @@ body {
 }
 
 .card:hover {
-    background-color: var(--primary-dark);
+    background-color: var(--contrast-light);
 }
 
 .card a {
