--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -12,7 +12,24 @@
 
   <body>
     <header>
-        {% include "navigation_bar.html" %}
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <div class="navbar-nav">
+            <a class="navbar-brand" href="#">Hello {{ user.username }}!</a>
+          </div>
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="{% url 'album_list' %}">Album List</a>
+            <a class="nav-item nav-link" href="{% url 'contact' %}">Contact</a>
+            <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
+            {% if user.is_authenticated %}
+              <form action="{% url 'logout' %}" method="POST">
+                {% csrf_token %}
+                <button class="nav-item nav-link" type="submit">Logout</button>
+              </form>
+            {% endif %}
+          </div>
+        </div>
+      </nav>
     </header>
 
     <main>
