Added profile page with review filtering in views based on if review is given

--- a/reviewSite/static/css/styles.css
+++ b/reviewSite/static/css/styles.css
@@ -41,6 +41,11 @@ body {
     text-decoration: none;
 }
 
+.card-title,
+.card-subtitle {
+    font-size: small;
+}
+
 .input-group {
     margin-bottom: 1rem;
     width: 50%;
