--- a/reviewSite/review_app/templates/review_album.html
+++ b/reviewSite/review_app/templates/review_album.html
@@ -1,4 +1,5 @@
-{% extends "base.html"%} 
+{% extends "base.html"%}
+{% load crispy_forms_tags %}
 {% block content %}
 
   <div class="container mt-4">
@@ -18,20 +19,12 @@
       </div>
 
       <div class="col">
-        <h2>Reviews</h2>
-        {% if album.review_set.all %}
-          <ul>
-            {% for review in album.review_set.all %}
-            <li>
-              <p>User: {{ review.user_name }}</p>
-              <p>Rating: {{ review.rating }}/5</p>
-              <p>Comment: {{ review.comment }}</p>
-            </li>
-            {% endfor %}
-          </ul>
-        {% else %}
-          <p>No reviews available for this album</p>
-        {% endif %}
+        <h1>Review the album</h1>
+          <form method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary">Submit Review</button>
+      </form>
       </div>
   </div>
 </div>
