--- a/reviewSite/review_app/templates/review_album.html
+++ b/reviewSite/review_app/templates/review_album.html
@@ -23,7 +23,7 @@
           <form method="POST">
             {% csrf_token %}
             {{ form|crispy }}
-            <button type="submit" class="btn btn-primary">Submit Review</button>
+            <button type="submit" class="btn btn-primary align-self-center">Submit Review</button>
       </form>
       </div>
   </div>
