--- a/reviewSite/review_app/templates/review_album.html
+++ b/reviewSite/review_app/templates/review_album.html
@@ -1,4 +1,5 @@
-{% extends "base.html"%} 
+{% extends "base.html"%}
+{% load crispy_forms_tags %}
 {% block content %}
 
   <div class="container mt-4">
@@ -17,8 +18,13 @@
         {% endif %}
       </div>
 
-      <div class="col text-center align-self-center">
-        <a class="btn btn-primary btn-lg" href="{% url 'review_album' album.pk %}" role="button">Write Review</a>
+      <div class="col">
+        <h1>Review the album</h1>
+          <form method="POST">
+            {% csrf_token %}
+            {{ form|crispy }}
+            <button type="submit" class="btn btn-primary align-self-center">Submit Review</button>
+      </form>
       </div>
   </div>
 </div>
