--- a/reviewSite/review_app/templates/album_detail.html
+++ b/reviewSite/review_app/templates/album_detail.html
@@ -18,7 +18,19 @@
       </div>
 
       <div class="col text-center align-self-center">
-        <a class="btn btn-primary btn-lg" href="{% url 'review_album' album.pk %}" role="button">Write Review</a>
+        {% if review %}
+          <h2>Your Review</h2>
+          <p>Content: {{ review.content }}</p>
+          <p>Album Score: {{ review.album_score }}</p>
+          <p>Cover Score: {{ review.cover_score }}</p>
+          <p>Favorite Track: {{ review.favorite_track }}</p>
+          <p>Worst Track: {{ review.worst_track }}</p>
+          <a class="btn btn-primary btn-lg" href="{% url 'review_update' review.pk %}" role="button">Edit Review</a>
+        {% else %}
+          <p>Hey! You haven't reviewed the album yet! Get those ears listenin' and type away. </p>
+          <a class="btn btn-primary btn-lg" href="{% url 'review_create' album.pk %}" role="button">Write Review</a>
+        {% endif %}
+        
       </div>
   </div>
 </div>
