--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -4,9 +4,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />    
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous"    />
-    <link rel="stylesheet" type="text/css" href="{% static 'css/styles.css' %}"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      type="text/css"
+      href="{% static 'css/styles.css' %}"
+    />
     <title>Album Top 23 of 23</title>
   </head>
 
@@ -18,30 +27,30 @@
             <a class="navbar-brand" href="#">Hello {{ user.username }}!</a>
           </div>
           <div class="navbar-nav">
-            <a class="nav-item nav-link" href="{% url 'album_list' %}">Album List</a>
+            <a class="nav-item nav-link" href="{% url 'album_list' %}"
+              >Album List</a
+            >
             <a class="nav-item nav-link" href="{% url 'contact' %}">Contact</a>
             <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
             {% if user.is_authenticated %}
-              <form action="{% url 'logout' %}" method="POST">
-                {% csrf_token %}
-                <button class="nav-item nav-link" type="submit">Logout</button>
-              </form>
+            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+            <form action="{% url 'logout' %}" method="POST">
+              {% csrf_token %}
+              <button class="nav-item nav-link" type="submit">Logout</button>
+            </form>
             {% endif %}
           </div>
         </div>
       </nav>
     </header>
 
-    <main>
-        {% block content %} 
-        {% endblock %}
-    </main>
+    <main>{% block content %} {% endblock %}</main>
 
     <footer>
-        <!-- Add your footer content here -->
-        <div class="container mt-4">      
-            <p>&copy; {{ year }} All Rights Reserved</p>
-        </div>
+      <!-- Add your footer content here -->
+      <div class="container mt-4">
+        <p>&copy; {{ year }} All Rights Reserved</p>
+      </div>
     </footer>
 
     <script
