--- a/reviewSite/review_app/templates/review_album.html
+++ b/reviewSite/review_app/templates/review_album.html
@@ -2,29 +2,42 @@
 {% load crispy_forms_tags %}
 {% block content %}
 
-  <div class="container mt-4">
-    <!-- Wrap content in a container for responsiveness -->
-    <div class="row align-items-start gx-5">
-
-      <div class="col">
-        <h1>{{ album.title }}</h1>
-        <p>Artist: {{ album.artist }}</p>
-        <p>Release Date: {{ album.release_date }}</p>
-
-        {% if album.cover_image %}
-          <img src="{{ album.cover_image.url }}" alt="{{ album.title }} Cover Image" />
-        {% else %}
-          <p>No cover image available</p>
-        {% endif %}
+<div class="container mt-4">
+  <!-- Wrap content in a container for responsiveness -->
+  <div class="row align-items-start gx-5 d-flex align-items-stretch">
+      <div class="col-md-6 cover-frame text-center d-flex flex-column">
+          {% if album.cover_image %}
+              <img src="{{ album.cover_image.url }}" class="img-fluid" alt="{{ album.title }} Cover Image" />
+          {% else %}
+              <p>No cover image available</p>
+          {% endif %}
+          <h1 class="info-text">{{ album.title }}</h1>
+          <h5>released by</h5>
+          <h2 class="info-text">{{ album.artist }}</h2>
+          <h5>on</h5>
+          <h3 class="info-text">{{ album.release_date|date:"d-m-Y" }}</h3>
+          <div class="mt-auto"></div> <!-- Spacer to push content to the top -->
       </div>
-
-      <div class="col">
-        <h1>Review the album</h1>
-          <form method="POST">
-            {% csrf_token %}
-            {{ form|crispy }}
-            <button type="submit" class="btn btn-primary align-self-center">Submit Review</button>
-      </form>
+      <div class="col-md-6 tracks-frame text-center align-self-center d-flex flex-column">
+          <div class="row flex-grow-1">
+              <h2>Tracks</h2>
+              <table class="track-table">
+                  {% for track in tracks %}
+                  <tr class="{% cycle 'odd' 'even' %}">
+                      <td class="left-align">{{ track.track_number }}</td>
+                      <td class="right-align">{{ track.title }}</td>
+                  </tr>
+                  {% endfor %}
+              </table>
+          </div>
+          <div class="row mt-auto">
+              <h1>Review the album</h1>
+              <form method="POST">
+                  {% csrf_token %}
+                  {{ form|crispy }}
+                  <button type="submit" class="btn btn-primary align-self-center">Submit Review</button>
+              </form>
+          </div>
       </div>
   </div>
 </div>
