--- a/reviewSite/review_app/templates/album_list.html
+++ b/reviewSite/review_app/templates/album_list.html
@@ -4,7 +4,7 @@
 
     <div class="container mt-4">
         <div>
-            <h1 class="text-center mb-4">Album List</h1>
+            <h1 class="text-center mb-4">Album List Edition 2025</h1>
             <hr />
             <form class="d-flex justify-content-around" method="GET">
                 <div class="input-group">
