--- a/reviewSite/review_app/templates/album_detail.html
+++ b/reviewSite/review_app/templates/album_detail.html
@@ -15,15 +15,13 @@
             <h2 class="info-text">{{ album.artist }}</h2>
             <h5>on</h5>
             <h3 class="info-text">{{ album.release_date|date:"d-m-Y" }}</h3>
-            {% with album_links=album.links.all %}
-                {% if album_links %}
-                    {% for album_link in album_links %}
-                        <a href="{{ album_link.url }}" target="_blank" class="btn btn-primary btn-lg mt-4 mb-4">
-                            <i class="fas fa-link"></i> Listen on {{ album_link.link_type }}
-                        </a>
-                    {% endfor %}
-                {% endif %}
-            {% endwith %}
+            {% if links %}
+                {% for link in links %}
+                    <a href="{{ link.url }}" target="_blank" class="btn btn-primary btn-lg mt-4 mb-4">
+                        <i class="fas fa-link"></i> Listen on {{ link.link_type }}
+                    </a>
+                {% endfor %}
+            {% endif %}
             <div class="mt-auto"></div> <!-- Spacer to push content to the top -->
         </div>
         <div class="col-md-6 tracks-frame text-center align-self-center d-flex flex-column">
