--- a/reviewSite/review_app/templates/base.html
+++ b/reviewSite/review_app/templates/base.html
@@ -33,7 +33,7 @@
             <a class="nav-item nav-link" href="{% url 'contact' %}">Contact</a>
             <a class="nav-item nav-link" href="{% url 'about' %}">About</a>
             {% if user.is_authenticated %}
-            <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
+            <a class="nav-item nav-link" href="{% url 'pending_reviews' user_pk=user.id %}">Pending Reviews</a>
             <form action="{% url 'logout' %}" method="POST">
               {% csrf_token %}
               <button class="nav-item nav-link" type="submit">Logout</button>
