fix url for update review

--- a/reviewSite/review_app/templates/album_detail.html
+++ b/reviewSite/review_app/templates/album_detail.html
@@ -96,7 +96,7 @@
                         </div>
                         
                         <div class="review-actions">
-                            <a class="edit-review-button" href="{% url 'review_update' review.pk %}">
+                            <a class="edit-review-button" href="{% url 'review_update' album.pk %}">
                                 <i class="bi bi-pencil me-2"></i>Edit Review
                             </a>
                         </div>
