--- a/reviewSite/review_app/templates/login.html
+++ b/reviewSite/review_app/templates/login.html
@@ -83,7 +83,7 @@
       justify-content: center;
       align-items: center;
       padding: 2rem;
-      background-color: white;
+      background-color: var(--primary-light);
     }
     
     .login-form {
